fix: remove vertical alignment from network icon styles for cleaner layout

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -125,6 +125,5 @@ ul.network-icon .big-icon {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  vertical-align: middle;
   border-radius: 0.25em;
 }
